[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes and scripts/vocab_practice.gd" type="Script" id=1]
[ext_resource path="res://sprites/character/Katana_Kat_Still.png" type="Texture" id=2]
[ext_resource path="res://scenes and scripts/character.gd" type="Script" id=3]
[ext_resource path="res://scenes and scripts/monster.gd" type="Script" id=4]
[ext_resource path="res://assets/NotoSansJP-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://sprites/ui/show_answer_pressed.png" type="Texture" id=6]
[ext_resource path="res://sprites/character/Katana_Kat.png" type="Texture" id=8]
[ext_resource path="res://sprites/character/Katana_Kat_Zwischenframe.png" type="Texture" id=9]
[ext_resource path="res://themes/word_label_english.tres" type="Theme" id=10]
[ext_resource path="res://sprites/ui/show_answer.png" type="Texture" id=11]
[ext_resource path="res://themes/text_field.tres" type="Theme" id=12]
[ext_resource path="res://themes/word_label_japanese.tres" type="Theme" id=13]
[ext_resource path="res://scenes and scripts/monster_sprite.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=5]
size = 35
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ) ],
"loop": true,
"name": "hit",
"speed": 9.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 5 )

[node name="vocab_practice" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 40.0, 140.0 ],
"_edit_vertical_guides_": [ 216.0 ]
}

[node name="new_word" type="Label" parent="."]
visible = false
margin_left = 363.0
margin_top = 45.0
margin_right = 582.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 5 )
text = "new word"

[node name="monster" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="questions_english" type="Label" parent="monster"]
margin_left = 216.0
margin_top = 40.0
margin_right = 719.0
margin_bottom = 140.0
theme = ExtResource( 10 )
text = "Sussy"
align = 1
valign = 1

[node name="questions_japanese" type="Label" parent="monster"]
margin_left = 216.0
margin_top = 40.0
margin_right = 720.0
margin_bottom = 140.0
theme = ExtResource( 13 )
text = "こんいろ"
align = 1
valign = 1

[node name="character" type="AnimatedSprite" parent="."]
position = Vector2( 207, 547 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 7 )
animation = "idle"
playing = true
script = ExtResource( 3 )

[node name="camera" type="Camera2D" parent="."]
anchor_mode = 0

[node name="lineedit" type="LineEdit" parent="."]
margin_left = 45.0
margin_top = 720.0
margin_right = 530.0
margin_bottom = 820.0
theme = ExtResource( 12 )
placeholder_text = "Click to start"

[node name="show_answer" type="TextureButton" parent="."]
margin_left = 575.0
margin_top = 720.0
margin_right = 675.0
margin_bottom = 820.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 6 )

[node name="reset_lineedit" type="LineEdit" parent="."]
margin_left = -264.0
margin_top = -94.0
margin_right = -206.0
margin_bottom = -70.0
virtual_keyboard_enabled = false

[node name="highscore_label" type="Label" parent="."]
margin_left = 102.0
margin_top = 1128.0
margin_right = 666.0
margin_bottom = 1451.0
custom_fonts/font = SubResource( 4 )

[node name="monster_sprite" parent="." instance=ExtResource( 14 )]
position = Vector2( 416, 395 )

[connection signal="animation_finished" from="character" to="character" method="_on_character_animation_finished"]
[connection signal="focus_entered" from="lineedit" to="." method="_on_lineedit_focus_entered"]
[connection signal="focus_exited" from="lineedit" to="." method="_on_lineedit_focus_exited"]
[connection signal="text_changed" from="lineedit" to="." method="_on_lineedit_text_changed"]
[connection signal="button_down" from="show_answer" to="." method="_on_show_answer_button_down"]
[connection signal="pressed" from="show_answer" to="." method="_on_show_answer_pressed"]
